change postion from absolute to fixed to not overlap on other content

--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -6,7 +6,7 @@ footer {
 	width: 100%;
 	height: 60px;
 	text-align: center;
-	position: absolute;
+	position: fixed;
 	bottom: 0%;
 	left: 0;
 	border-top: 1px solid #CCCCCC;
